<resources>
    <string name="app_name">SchoolLine</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_students">Students</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="topic_register_a_student">Register A Student</string>
    <string name="menu_teachers">Teachers</string>
    <string name="menu_payments">Payments</string>
    <string name="menu_subjects">Subjects</string>
    <string name="menu_grades">Grades</string>
    <string name="menu_classrooms">Classrooms</string>
    <string name="nav_header_school_line">SchoolLine</string>
    <string name="nav_header_school_line_gmail_com">schoolline@gmail.com</string>
    <string name="topic_register_a_teacher">Register A Teacher</string>
    <string name="menu_results">Results</string>
    <string name="students_manage">Students Manage</string>
    <string name="students_add_a_student">Add A Student</string>
    <string name="students_view_students">View Students</string>
    <string name="student_add_register_a_student">REGISTER A STUDENT</string>
    <string name="student_register_first_name">First Name</string>
    <string name="student_register_last_name">Last Name</string>
    <string name="student_register_btn_add_student">Add STUDENT</string>
    <string name="subjects_add_a_subject">Add A Subject</string>
    <string name="subjects_view_subjects">View Subjects</string>
    <string name="topic_subjects_manage">Subjects Manage</string>
</resources>
